--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "depcheck": "^1.4.7",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
